--- a/jobplus/templates/job/detail.html
+++ b/jobplus/templates/job/detail.html
@@ -1,59 +1,54 @@
 {% extends "base.html" %}
 
 {% block title %}
-  Job - {{ job.name }}
+{{ job.name }}
+{% endblock %}
+
+{% block head %}
+<div class="jumbotron">
+  <div class="container">
+    <div class="col-md-8">
+      <h2>{{ job.name }}</h2>
+      <span class="timesince">{{ job.created_at | timesince }}发布</span>
+      <p><span class="job-salary">{{ job.salary_low }}-{{ job.salary_high }}</span>&nbsp;经验{{ job.experience_requirement }} {% if job.experience_requirement != '不限' %}年{% endif %} 学历{{ job.degree_requirement }}</p>
+    </div>
+    <div class="col-md-4">
+      {% if current_user.is_authenticated %}
+        {% if not job.current_user_is_applied %}
+          <a href="{{ url_for('job.apply', job_id=job.id) }}"class="btn btn-success btn-lg dilivery-btn">投递简历</a>
+        {% else %}
+          <a href="#"class="btn btn-success btn-lg dilivery-btn" disabled="disabled">已投递</a>
+        {% endif %}
+      {% endif %}
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 {% block body %}
-  <div class="jumbotron">
-     <div class="container">
-   </div>
-     <h2>{{ job.name }}</h2>
-     <p>{{salary_low}}-{{salary_high}}  经验{{ job.experience_requirement }} {% if job.experience_requirement != '不限' %}年{% endif %}  学历{{ job.degree_requirement }} 
-     </p>
-
-     {% for tag in job.tag_list %}
-     <span class="label label-default">{{ tag }}</span>
-     {% endfor %}
-     <div style="width:100px;display:inline;float:right;">
-            {% if not current_user.is_authenticated %}
-            <a class="btn btn-primary btn-lg" href="{{ url_for('front.login') }}" role="button">Deliver</a>
-            {% else %}
-            <a class="btn btn-primary btn-lg" href="#" role="button">Deliver</a>
-            {% endif %}
-     </div>
+<div class="col-md-8">
+  <div class="job-detail">
+    <h3>职位标签</h3> <br>
+    <p>{{ job.tags }}</p>
+    <br>
+    <h3>职位描述</h3> <br>
+    <p>{{ job.description }}</p>
   </div>
-  <div class="row">
-    <div class="col-md-8">
-      <h3>Job description:</h3>
-      <p>{{ job.name }}</p>
-    </div>
-
-    <div class="col-md-4">
-      <div class="container">
-      </div>
-      <h3>{{ job.company.name }}</h3>
-      <div class="media">
-        <div class="media-left">
-        <a href="#">
-          <img class="media-object" src="" alt="64x64">
-        </a>
-      </div>
-      <div class="media-body">
-        <h4 class="media-heading">{{ job.company.detail.description }}</h4>     
-    </div>
+</div>
+<div class="col-md-4">
+  <div class="media">
+  <div class="media-left">
+    <a href="#">
+      <img src="{{ job.company.detail.logo }}" class="media-object" height="96" width="96">
+    </a>
   </div>
-      <div class="list-group">
-      {% for job in newest_companies_jobs %}
-      <a class="list-group-item" href="#">
-        <span>{{ job.name }}</span>
-      </a>
-      {% endfor %}
-    <p class="list-more">
-    <a href="#" class="btn-group btn-group-justified">查看更多</a>
-    </p>
-    </div>
-
+  <div class="media-body">
   </div>
+</div>
+
+  <h4>{{ job.company.name }}</h4>
+  <p>领域：{{ job.company.detail.field }}</p>
+  <p>融资：{{ job.company.detail.finance_stage }}</p>
+  <p>城市：{{ job.company.detail.location }}</p>
+</div>
 {% endblock %}
-
